avant rendu final

--- a/Contact.html
+++ b/Contact.html
@@ -7,11 +7,10 @@
     <title>SAFI | Contact</title>
 </head>
 <body class="bg-[#0000A3] text-white">
-
     <header class="flex w-full h-15 ml-28 p-2 justify-start items-center">
         <div id="Logo" class="flex m-4">
-            <p class="text-white text-5xl font-[800]">*</p>
-            <p class="text-2xl text-white font-semibold">safi.</p>
+            <p class="text-white  text-5xl font-[800]">*</p>
+            <p class="text-2xl  text-white font-semibold">safi.</p>
         </div>
         <nav>
             <ul class="flex ml-40 text-white text-mg">
@@ -19,13 +18,13 @@
                     <a href="Home.html">À propos</a>
                 </li>
                 <li class="m-6">
-                    <a href="">Services</a>
+                    <a href="Service1.html">Services</a>
                 </li>
                 <li class="m-6">
                     <a href="Blog.html">Blog</a>
                 </li>
-                <li class="m-6 font-[900]">
-                    <a href="Contact.html">Contact</a>
+                <li class="m-6 ">
+                    <a href="Contact.htmlfont-[900]">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -78,23 +77,23 @@
             </div>
             <div class="flex flex-row gap-8">
                 <a href="Home.html" class="hover:underline">About</a>
-                <a href="#" class="hover:underline">Services</a>
+                <a href="Service1.html" class="hover:underline">Services</a>
                 <a href="Blog.html" class="hover:underline">Blog</a>
                 <a href="Contact.html" class="hover:underline">Contact</a>
             </div>
             <div class="content-end  max-w-screen-lg mx-auto text-center space-y-4">
                 <div class="flex h-32 w-96 justify-center items-end space-x-4">
                     <p class="text-sm md:text-base text-white">contact@safi.digital</p>
-                    <a href="#" class="bg-white rounded-full p-2">
+                    <a href="https://linkedin.com/company/safi-digital/" target="_blank" class="bg-white rounded-full p-2">
                         <img src="images/facebookicon.jpg"  class="w-5 h-5">
                     </a>
-                    <a href="#"  class="bg-white rounded-full p-2">
+                    <a href="https://instagram.com/safi._digital" target="_blank"  class="bg-white rounded-full p-2">
                         <img src="images/business-icons-business-ecommerce-finance-accounting-big-set-icons-collection-vector-illustrat_1059745-252.avif"  class="w-5 h-5">
                     </a>
-                    <a href="#"  class="bg-white rounded-full  p-2">
+                    <a href="https://linkedin.com/company/safi-digital/" target="_blank"  class="bg-white rounded-full  p-2">
                         <img src="images/xicon.jpg"  class="w-5 h-5">
                     </a>
-                    <a href="#"  class="bg-white rounded-full p-2">
+                    <a href="https://linkedin.com/company/safi-digital/" target="_blank" class="bg-white rounded-full p-2">
                         <img src="images/linkinicon.jpg"  class="w-5 h-5">
                     </a>
 
