--- a/test.html
+++ b/test.html
@@ -1,54 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Expertise</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-[#0000A3] text-white font-sans">
-    <!-- Navbar -->
-    <nav class="flex justify-between items-center px-8 py-4">
-      <div class="text-white text-2xl font-bold">✶ safi.</div>
-      <ul class="flex gap-8 text-sm font-medium">
-        <li><a href="#" class="hover:underline">À propos</a></li>
-        <li><a href="#" class="hover:underline">Services</a></li>
-        <li><a href="#" class="hover:underline">Blog</a></li>
-        <li><a href="#" class="hover:underline">Contact</a></li>
-      </ul>
-    </nav>
-
-    <!-- Nuages -->
-    <div class="absolute top-10 left-10 text-white text-4xl">☁️</div>
-    <div class="absolute top-20 right-16 text-white text-4xl">☁️</div>
-    <div class="absolute bottom-10 left-20 text-white text-4xl">☁️</div>
-
-    <!-- Section Expertise -->
-    <section class="text-center px-6 py-16">
-      <h1 class="text-4xl md:text-5xl font-semibold mb-4 underline decoration-white">Our Expertise</h1>
-      <p class="max-w-2xl mx-auto text-base md:text-lg text-white/90">
-        Our blend of creativity and technical finesse ensures bespoke solutions that elevate brands
-        and captivate audiences, leaving an unforgettable imprint on the design landscape.
-      </p>
-
-      <!-- Tags -->
-      <div class="flex flex-wrap justify-center gap-4 mt-10">
-        <span class="bg-[#3A5FFF] text-white px-4 py-2 rounded-full font-semibold">Web dev</span>
-        <span class="bg-white text-black px-4 py-2 rounded-full font-semibold">Software dev</span>
-        <span class="bg-[#3A5FFF] text-white px-4 py-2 rounded-full font-semibold">UI UX Design</span>
-        <span class="bg-white text-black px-4 py-2 rounded-full font-semibold">Cybersecurity</span>
-        <span class="bg-white text-black px-4 py-2 rounded-full font-semibold">Digital services</span>
-        <span class="bg-[#3A5FFF] text-white px-4 py-2 rounded-full font-semibold">Deployment & Hosting</span>
-        <span class="bg-white text-black px-4 py-2 rounded-full font-semibold">Branding</span>
-        <span class="bg-[#3A5FFF] text-white px-4 py-2 rounded-full font-semibold">Graphics</span>
-      </div>
-
-      <!-- Button -->
-      <div class="mt-12">
-        <button class="bg-white text-[#0000A3] font-bold px-6 py-3 rounded-full hover:bg-gray-200">
-          Explore More
-        </button>
-      </div>
-    </section>
-  </body>
-</html>
+<header class="flex w-full h-15 ml-28 p-2 justify-start items-center">
+        <div id="Logo" class="flex m-4">
+            <p class="text-white  text-5xl font-[800]">*</p>
+            <p class="text-2xl  text-white font-semibold">safi.</p>
+        </div>
+        <nav>
+            <ul class="flex ml-40 text-white text-mg">
+                <li class="m-6 font-[900]">
+                    <a href="Home.html">À propos</a>
+                </li>
+                <li class="m-6">
+                    <a href="">Services</a>
+                </li>
+                <li class="m-6">
+                    <a href="Blog.html">Blog</a>
+                </li>
+                <li class="m-6 ">
+                    <a href="Contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
