--- a/Blog.html
+++ b/Blog.html
@@ -9,21 +9,21 @@
 <body class="overflow-x-hidden overflow-y-hidden m-0 bg-[url(images/blogBg.jpg)] bg-start h-screen w-full">
     <header class="flex w-full h-15 ml-28 p-2 justify-start items-center">
         <div id="Logo" class="flex m-4">
-            <p class="text-white text-5xl font-[800]">*</p>
-            <p class="text-2xl text-white font-semibold">safi.</p>
+            <p class="text-white  text-5xl font-[800]">*</p>
+            <p class="text-2xl  text-white font-semibold">safi.</p>
         </div>
         <nav>
             <ul class="flex ml-40 text-white text-mg">
-                <li class="m-6">
+                <li class="m-6 ">
                     <a href="Home.html">À propos</a>
                 </li>
                 <li class="m-6">
-                    <a href="">Services</a>
+                    <a href="Service1.html">Services</a>
                 </li>
                 <li class="m-6 font-[900]">
                     <a href="Blog.html">Blog</a>
                 </li>
-                <li class="m-6">
+                <li class="m-6 ">
                     <a href="Contact.html">Contact</a>
                 </li>
             </ul>
@@ -58,11 +58,10 @@
                             &nbsp;&nbsp;&nbsp;. Des conseils pratiques pour creer et developper une marque <br>
                             &nbsp;&nbsp;&nbsp;. Nos découvertes dans le monde tech <br>
                             &nbsp;&nbsp;&nbsp;. Et notre expérience en tant que jeunes fondateurs passionnés <br>
-                            Merci de nous lire. Merci de faire partie du voyage.</p>
-                        <div class="w-80 content-center text-end ">
-                            <button class="w-28 h-9 bg-white border outline-none rounded-full shadow-[0_0_10px_rgba(0,0,0,0.1)] cursor-pointer text-[16px] text-[#0000A3] text-center text-sm font-semibold">
-                                Next
-                            </button>
+                            Merci de nous lire. Merci de faire partie du voyage.
+                        </p>
+                        <div class="flex flex-col h-48 justify-end items-end  mb-8 ">
+                            <a class="flex w-28 h-9 bg-white border border-[#00C896] outline-none rounded-full shadow-[0_0_10px_rgba(0,0,0,0.1)] cursor-pointer text-[16px] text-[#0000A3] text-center justify-center text-sm font-semibold items-center" href="Service4.html">Next</a>
                         </div>
                     </div>
                     
