--- a/Service2.html
+++ b/Service2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SAFI | Services</title>
+    <title>SAFI | Service 2</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="m-0 p-0">
@@ -11,8 +11,8 @@
         <div class="w-1/2 bg-[#0000A3] text-[#ffffff] flex flex-col justify-start px-20">
             <div class="flex flex-row mb-24 mt-6 ">
                 <div id="Logo" class="flex m-4 w-8">
-                    <p class="text-white text-5xl font-[800]">*</p>
-                    <p class="text-2xl text-white font-semibold">safi.</p>
+                    <p class="text-white  text-5xl font-[800]">*</p>
+                    <p class="text-2xl  text-white font-semibold">safi.</p>
                 </div>
                 <nav>
                     <ul class="flex ml-28 text-white font-">
@@ -20,7 +20,7 @@
                             <a href="Home.html">A propos</a>
                         </li>
                         <li class="m-6 font-[900]">
-                            <a href="">Services</a>
+                            <a href="Service1.html">Services</a>
                         </li>
                         <li class="m-6 ">
                             <a href="Blog.html">Blog</a>
@@ -42,9 +42,7 @@
                 de logiciels, nous vous aidons à bâtir <br> votre projet numérique de A à Z.
             </p>
             <div class="flex flex-col h-48 justify-end items-end  mb-8 ">
-                <button class="w-28 h-9 bg-white border border-[#00C896] outline-none rounded-full shadow-[0_0_10px_rgba(0,0,0,0.1)] cursor-pointer text-[16px] text-[#0000A3] text-center text-sm font-semibold">
-                    Next
-                </button>
+                <a class="flex w-28 h-9 bg-white border border-[#00C896] outline-none rounded-full shadow-[0_0_10px_rgba(0,0,0,0.1)] cursor-pointer text-[16px] text-[#0000A3] text-center justify-center text-sm font-semibold items-center" href="Service3.html">Next</a>
             </div>
             
         </div>    
