--- a/Service4.html
+++ b/Service4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SAFI | Services</title>
+    <title>SAFI | Service 4</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="m-0 p-0">
@@ -20,7 +20,7 @@
                             <a href="Home.html">A propos</a>
                         </li>
                         <li class="m-6 font-[900]">
-                            <a href="">Services</a>
+                            <a href="Service1.html">Services</a>
                         </li>
                         <li class="m-6 ">
                             <a href="Blog.html">Blog</a>
@@ -44,11 +44,8 @@
                 Votre présence en ligne, sans stress.<br>
             </p>
             <div class="flex flex-col h-48 justify-end items-end  mb-8 ">
-                <button class="w-28 h-9 bg-white border border-[#00C896] outline-none rounded-full shadow-[0_0_10px_rgba(0,0,0,0.1)] cursor-pointer text-[16px] text-[#0000A3] text-center text-sm font-semibold">
-                    Next
-                </button>
+                <a class="flex w-28 h-9 bg-white border border-[#00C896] outline-none rounded-full shadow-[0_0_10px_rgba(0,0,0,0.1)] cursor-pointer text-[16px] text-[#0000A3] text-center justify-center text-sm font-semibold items-center" href="Contact.html">Next</a>
             </div>
-            
         </div>    
         <div class="w-1/2 h-screen m-0 bg-[url('images/imgS4.4.jpg')] bg-cover bg-center">
         </div>
