--- a/Blog.html
+++ b/Blog.html
@@ -7,67 +7,111 @@
     <title>SAFI | Blog</title>
 </head>
 <body class="overflow-x-hidden overflow-y-hidden m-0 bg-[url(images/blogBg.jpg)] bg-start h-screen w-full">
-    <header class="flex w-full h-15 ml-28 p-2 justify-start items-center">
-        <div id="Logo" class="flex m-4">
-            <p class="text-white  text-5xl font-[800]">*</p>
-            <p class="text-2xl  text-white font-semibold">safi.</p>
+    <header class="w-full text-white px-4 py-3 flex justify-start items-center">
+<!-- Logo -->
+        <div id="Logo" class="flex items-center ml-8">
+            <p class="text-6xl font-extrabold">*</p>
+            <p class="text-4xl font-bold ml-2">safi.</p>
         </div>
-        <nav>
-            <ul class="flex ml-40 text-white text-mg">
-                <li class="m-6 ">
+
+<!-- Navigation -->
+        <nav class="relative w-full md:w-auto flex items-center justify-end">
+<!-- Burger -->
+            <div class="md:hidden flex flex-col justify-center cursor-pointer mr-2" onclick="toggleMenu()">
+                <div class="w-6 h-1 bg-white my-1 rounded transition-all"></div>
+                <div class="w-6 h-1 bg-white my-1 rounded transition-all"></div>
+                <div class="w-6 h-1 bg-white my-1 rounded transition-all"></div>
+            </div>
+
+<!-- Menu -->
+            <ul id="menu" class="ml-28 gap-10 hidden md:flex md:flex-row flex-col absolute md:static top-full left-0 w-full md:w-auto bg-blue-700 md:bg-transparent z-20 text-base font-medium">
+                <li class="m-3 md:mx-4">
                     <a href="Home.html">À propos</a>
                 </li>
-                <li class="m-6">
-                    <a href="Service1.html">Services</a>
+                <li class="m-3 md:mx-4 relative group">
+                    <a href="Service1.html" class="flex items-center gap-1">
+                    Services
+                    <span class="material-icons text-sm"></span>
+                    </a>
+<!-- Dropdown -->
+                    <ul class="absolute top-full left-0 hidden group-hover:block bg-white text-black min-w-[150px] shadow-lg mt-1 rounded">
+                        <li><a href="Service1.html" class="block px-4 py-2 hover:bg-blue-100">Service 1</a></li>
+                        <li><a href="Service2.html" class="block px-4 py-2 hover:bg-blue-100">Service 2</a></li>
+                        <li><a href="Service3.html" class="block px-4 py-2 hover:bg-blue-100">Service 3</a></li>
+                        <li><a href="Service4.html" class="block px-4 py-2 hover:bg-blue-100">Service 4</a></li>
+                    </ul>
                 </li>
-                <li class="m-6 font-[900]">
+                <li class="m-3 md:mx-4 font-[900]">
                     <a href="Blog.html">Blog</a>
                 </li>
-                <li class="m-6 ">
+                <li class="m-3 md:mx-4">
                     <a href="Contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
-    </header>
-    <main class="h-screen  bg-[url(images/blogBg.jpg)] bg-center bg-cover ">
-        <div class="flex flex-col p-24 pt-2">
-            <div>
-                <h1 class="m-6 text-white text-5xl font-[700]">Notre histoire - la naissance de Safi</h1>
-            </div>
-            <div class="flex flex-col">
-                <p class="ml-6 text-white text-sm font-[220] ">Chez Safi, tout a commencé avec une idee simple : utiliser notre passion pour le developpement et la creation digitale afin d'aider d'autres personnes à lancer leurs projets.<br>
-                    Nous sommes Assed Mustapha Kacemi et Adnene Bendiouis, deux etudiants en informatique passionnes par le code, le design, la technologie ... et surtout par le fait de créer des
-                    choses qui ont du sens. <br>
-                    Pendant nos etudes, on a remarque que beaucoup de jeunes createurs ou entrepreneurs avaient de belles idees, mais manquaient de soutien technique pour les transformer en <br>
-                    réalité. <br>
-                    &nbsp;&nbsp;C'est de là qu'est née Safi - une startup hybride, 100 % en ligne, qui accompagne les projets numériques du début à la fin : branding, développement, déploiement et sécurité. <br>
-                    Pourquoi le nom Safi ? <br>
-                    Le nom Safi s'inspire de la requête SQL bien connue : <br>
-                    SELECT * FROM IT - autrement dit : tout l'IT, pour vous. <br>
-                    &nbsp;Mais ce n'est pas tout : Safi evoque aussi le mot anglais "Safety", c'est-a-dire la securite, une valeur essentielle dans notre maniere de creer des produits fiables et durables. <br>
-                    Et notre logo ? <br>
-                    Le cour de notre logo, c'est l'etoile "*" de SQL, qui represente l'idee de tout selectionner, de tout offrir - comme dans une requete complete. <br>
-                    &nbsp;Ce symbole traduit notre vision : offrir une solution globale, de la creation de marque au produit fini, en passant par l'hebergement et la securisation. <br>
-                    L'étoile, c'est aussi l'ambition, la creativite et la direction : une etoile qui guide votre projet. <br> </p>
-                    <div class="flex ">
-                        <p class="ml-6 text-white text-sm font-[220] ">Une vision simple : <br>
-                            Chez Safi, on croit que le digital peut être simple, humain et puissant à la fois. <br>
-                            On veut permettre à n'importe qui, où qu'il soit, de transformer une idée en produit réel et professionnel. <br>
-                            Ce blog est notre espace libre. On y partage : <br>
-                            &nbsp;&nbsp;&nbsp;· L'évolution de Safi, nos projets et nos coulisses <br>
-                            &nbsp;&nbsp;&nbsp;. Des conseils pratiques pour creer et developper une marque <br>
-                            &nbsp;&nbsp;&nbsp;. Nos découvertes dans le monde tech <br>
-                            &nbsp;&nbsp;&nbsp;. Et notre expérience en tant que jeunes fondateurs passionnés <br>
-                            Merci de nous lire. Merci de faire partie du voyage.
-                        </p>
-                        <div class="flex flex-col h-48 justify-end items-end  mb-8 ">
-                            <a class="flex w-28 h-9 bg-white border border-[#00C896] outline-none rounded-full shadow-[0_0_10px_rgba(0,0,0,0.1)] cursor-pointer text-[16px] text-[#0000A3] text-center justify-center text-sm font-semibold items-center" href="Service4.html">Next</a>
-                        </div>
-                    </div>
-                    
-            </div>
-        </div>
-    </main>
     
+    </header>
+    <main class="min-h-screen bg-[url(images/blogBg.jpg)] bg-center bg-cover">
+  <div class="flex flex-col px-6 sm:px-12 lg:px-24 py-6 pt-2">
+    <h1 class="m-6 text-white text-3xl sm:text-4xl md:text-5xl font-bold">
+      Notre histoire - la naissance de Safi
+    </h1>
+    <div class="flex flex-col gap-4 text-white text-sm sm:text-base ml-4 sm:ml-6 font-light">
+      <p>
+        Chez Safi, tout a commencé avec une idée simple : utiliser notre passion pour le développement et la création digitale afin d'aider d'autres personnes à lancer leurs projets.
+        <br />
+        Nous sommes Assed Mustapha Kacemi et Adnene Bendiouis, deux étudiants en informatique passionnés par le code, le design, la technologie...
+      </p>
+      <p>
+        Pendant nos études, on a remarqué que beaucoup de jeunes créateurs ou entrepreneurs avaient de belles idées, mais manquaient de soutien technique pour les transformer en réalité.
+      </p>
+      <p>
+        C'est de là qu'est née Safi – une startup hybride, 100 % en ligne, qui accompagne les projets numériques du début à la fin : branding, développement, déploiement et sécurité.
+      </p>
+      <p>
+        Pourquoi le nom Safi ? Il s'inspire de la requête SQL :
+        <br />
+        <code class="bg-gray-800 text-green-400 px-2 py-1 rounded-md inline-block text-sm mt-2">SELECT * FROM IT</code>
+        <br />
+        autrement dit : tout l’IT, pour vous.
+      </p>
+      <p>
+        Le mot évoque aussi "Safety", une valeur essentielle dans notre manière de créer des produits fiables et durables.
+        <br />
+        L’étoile de notre logo symbolise l’ambition, la créativité et la direction : une étoile qui guide votre projet.
+      </p>
+
+      <div class="bg-white/10 p-4 rounded-md backdrop-blur-sm">
+        <h2 class="font-semibold text-white text-base mb-2">Une vision simple :</h2>
+        <ul class="list-disc list-inside text-white text-sm">
+          <li>Le digital peut être simple, humain et puissant à la fois.</li>
+          <li>On veut permettre à n'importe qui de transformer une idée en produit réel.</li>
+          <li>Ce blog est notre espace libre, on y partage :</li>
+          <li>· L'évolution de Safi, nos projets et nos coulisses</li>
+          <li>· Des conseils pratiques pour créer et développer une marque</li>
+          <li>· Nos découvertes dans le monde tech</li>
+          <li>· Notre expérience de jeunes fondateurs passionnés</li>
+        </ul>
+        <p class="">Merci de nous lire. Merci de faire partie du voyage.</p>
+      </div>
+    </div>
+
+    <div class="flex justify-end mt-8">
+      <a
+        class="w-28 h-9 bg-white border border-[#00C896] rounded-full shadow-md cursor-pointer text-sm text-[#0000A3] font-semibold flex items-center justify-center hover:scale-105 transition-transform"
+        href="Contact.html"
+      >
+        Next
+      </a>
+    </div>
+  </div>
+</main>
+
+    <script>
+        function toggleMenu() {
+            const menu = document.getElementById('menu');
+            menu.classList.toggle('hidden');
+        }
+    </script>
 </body>
 </html>
