--- a/Contact.html
+++ b/Contact.html
@@ -7,27 +7,49 @@
     <title>SAFI | Contact</title>
 </head>
 <body class="bg-[#0000A3] text-white">
-    <header class="flex w-full h-15 ml-28 p-2 justify-start items-center">
-        <div id="Logo" class="flex m-4">
-            <p class="text-white  text-5xl font-[800]">*</p>
-            <p class="text-2xl  text-white font-semibold">safi.</p>
+    <header class="w-full text-white px-4 py-3 flex justify-start items-center">
+<!-- Logo -->
+        <div id="Logo" class="flex items-center ml-8">
+            <p class="text-6xl font-extrabold">*</p>
+            <p class="text-4xl font-bold ml-2">safi.</p>
         </div>
-        <nav>
-            <ul class="flex ml-40 text-white text-mg">
-                <li class="m-6 ">
+
+<!-- Navigation -->
+        <nav class="relative w-full md:w-auto flex items-center justify-end">
+<!-- Burger -->
+            <div class="md:hidden flex flex-col justify-center cursor-pointer mr-2" onclick="toggleMenu()">
+                <div class="w-6 h-1 bg-white my-1 rounded transition-all"></div>
+                <div class="w-6 h-1 bg-white my-1 rounded transition-all"></div>
+                <div class="w-6 h-1 bg-white my-1 rounded transition-all"></div>
+            </div>
+
+<!-- Menu -->
+            <ul id="menu" class="ml-28 gap-10 hidden md:flex md:flex-row flex-col absolute md:static top-full left-0 w-full md:w-auto bg-blue-700 md:bg-transparent z-20 text-base font-medium">
+                <li class="m-3 md:mx-4 ">
                     <a href="Home.html">À propos</a>
                 </li>
-                <li class="m-6">
-                    <a href="Service1.html">Services</a>
+                <li class="m-3 md:mx-4 relative group">
+                    <a href="Service1.html" class="flex items-center gap-1">
+                    Services
+                    <span class="material-icons text-sm"></span>
+                    </a>
+<!-- Dropdown -->
+                    <ul class="absolute top-full left-0 hidden group-hover:block bg-white text-black min-w-[150px] shadow-lg mt-1 rounded">
+                        <li><a href="Service1.html" class="block px-4 py-2 hover:bg-blue-100">Service 1</a></li>
+                        <li><a href="Service2.html" class="block px-4 py-2 hover:bg-blue-100">Service 2</a></li>
+                        <li><a href="Service3.html" class="block px-4 py-2 hover:bg-blue-100">Service 3</a></li>
+                        <li><a href="Service4.html" class="block px-4 py-2 hover:bg-blue-100">Service 4</a></li>
+                    </ul>
                 </li>
-                <li class="m-6">
+                <li class="m-3 md:mx-4">
                     <a href="Blog.html">Blog</a>
                 </li>
-                <li class="m-6 ">
-                    <a href="Contact.htmlfont-[900]">Contact</a>
+                <li class="m-3 md:mx-4 font-[900]">
+                    <a href="Contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
+    
     </header>
     <section class="text-center px-4 md:px-0 max-w-3xl mx-auto">
         <h1 class="text-6xl font-[400] mb-4 mt-8">Vous avez une idée géniale ?</h1>
@@ -101,5 +123,11 @@
             </div>
         </div>
     </footer>
+    <script>
+        function toggleMenu() {
+            const menu = document.getElementById('menu');
+            menu.classList.toggle('hidden');
+        }
+    </script>
 </body>
 </html>
