Make logo clickable and add cursor pointer for better user interaction

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 <body>
     <!-- Navbar -->
     <header class="navbar">
-        <div class="logo">
+        
+        <a href="#hero""><div class="logo">
             <div class="logo-symbol">*</div>
             <div class="logo-text">safi.</div>
         </div>
+        </a>
         
         <nav class="nav-links">
             <a href="#hero">À propos</a>
