Refactor index.html and script.js for improved form handling and UI interactions; enhance style.css for responsive design and layout adjustments

--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Safi | Votre idée, notre mission</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-        integrity="sha512-Xxj28L1K54gONtCMZ4gxpmhx7W5E2St+TZogUu7+bJvMYRb+9U8WoyfsROIK4aNQZf2TnJ7cx8QQA1fg8XdO4w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" type="image/png" href="images/logo.png">
 
 
@@ -23,14 +19,17 @@
 <body>
     <!-- Navbar -->
     <header class="navbar">
-        
-        <a href="#hero""><div class="logo">
-            <div class="logo-symbol">*</div>
-            <div class="logo-text">safi.</div>
-        </div>
+
+        <a href="#hero">
+            <div class="logo">
+                <div class="logo-symbol">*</div>
+                <div class="logo-text">safi.</div>
+            </div>
         </a>
-        
+
         <nav class="nav-links">
+            <div class="menu-toggle" id="menu-toggle">☰</div>
+
             <a href="#hero">À propos</a>
             <div class="dropdown">
                 <a href="#">Services ▾</a>
@@ -225,7 +224,7 @@
             </p>
 
             <div class="safi-blog-button">
-                <a href="#" class="next-button">Next</a>
+                <a href="#contact" class="next-button">Next</a>
             </div>
         </div>
 
@@ -238,29 +237,34 @@
     <!-- Contact Section -->
     <section class="contact-section reveal" id="contact">
         <h1 class="contact-title">Vous avez une idée géniale ?</h1>
+
         <p class="contact-subtitle">
             Vous avez une idée géniale que vous aimeriez développer ensemble ?<br>
             N'hésitez pas à nous en faire part en remplissant les informations ci-dessous.
         </p>
 
         <div class="form-container">
-            <form>
+            <form id="contact-form">
                 <div class="form-row">
                     <div class="form-group">
-                        <label for="name">Nom & Prénom</label>
-                        <input type="text" id="name" placeholder="Entrez le nom et l'entreprise" />
+                        <label for="user_name">Nom & Prénom</label>
+                        <input type="text" id="user_name" name="user_name"
+                            placeholder="Entrez le nom et l'entreprise" />
                     </div>
                     <div class="form-group">
-                        <label for="email">Mail</label>
-                        <input type="email" id="email" placeholder="Entrez l’email" />
+                        <label for="user_email">Mail</label>
+                        <input type="email" id="user_email" name="user_email" placeholder="Entrez l’email" />
                     </div>
                 </div>
                 <div class="form-group full-width">
                     <label for="message">Dites-nous</label>
-                    <input type="text" id="message" placeholder="Allez-y, parlez-nous de votre idée" />
+                    <input type="text" id="message" name="message" placeholder="Allez-y, parlez-nous de votre idée" />
                 </div>
                 <div class="submit-wrapper">
-                    <button type="submit" class="submit-button">Envoyer l'email</button>
+                    <button type="submit" class="submit-button" id="submit-btn">
+                        <span id="submit-text">Envoyer l'email</span>
+                        <span id="loading-text" class="hidden">Envoi...</span>
+                    </button>
                 </div>
             </form>
         </div>
@@ -300,25 +304,8 @@
 
 
 
-
-
-    <script>
-  const reveals = document.querySelectorAll('.reveal');
-
-  const revealOnScroll = () => {
-    const triggerBottom = window.innerHeight * 0.85;
-
-    reveals.forEach((el) => {
-      const boxTop = el.getBoundingClientRect().top;
-      if (boxTop < triggerBottom) {
-        el.classList.add('visible');
-      }
-    });
-  };
-
-  window.addEventListener('scroll', revealOnScroll);
-  window.addEventListener('load', revealOnScroll);
-</script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>   
+<script src="script.js"></script>
 
 
 </body>
