Enhance button styles and layout in index.html; add hover animations and responsive adjustments in style.css

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             <span class="bubble blue rotate-5">Graphics</span>
         </div>
 
-        <div class="button-wrapper">
-            <a href="#branding" class="explore-button">Explore More</a>
-        </div>
+    <div class="button-wrapper">
+    <a href="#branding" class="explore-button creative-button">Explore More</a>
+</div>
 
     </section>
 
@@ -183,6 +183,7 @@
     <section class="safi-blog-section reveal" id="safi-blog-section">
         <div class="safi-blog-container">
             <h1 class="safi-blog-title">Notre histoire – la naissance de Safi</h1>
+            <div class="container">
             <p class="safi-blog-paragraph">
                 Chez Safi, tout a commencé avec une idée simple : utiliser notre passion pour le développement et la
                 création digitale afin d'aider d'autres personnes à lancer leurs projets.<br><br>
@@ -222,7 +223,7 @@
 
                 Merci de nous lire. Merci de faire partie du voyage.
             </p>
-
+</div>
             <div class="safi-blog-button">
                 <a href="#contact" class="next-button">Next</a>
             </div>
