Update footer link text to French and add Google Analytics tracking script

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <small>@ 2025 safi.digital All Rights Reserved</small>
             </div>
             <div class="footer-center">
-                <a href="#hero">About</a>
+                <a href="#hero">A propos</a>
                 <a href="#expertise">Services</a>
                 <a href="#safi-blog-section">Blog</a>
                 <a href="#contact">Contact</a>
@@ -322,7 +322,15 @@
             menu.classList.toggle('z-50');
         });
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V2T3NPGG77"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-V2T3NPGG77');
+</script>
 
 </body>
 
